// Vitest Snapshot v1

exports[`Console backend > avoids changing debug messages 1`] = `
[
  "%s %o %c%s %c%s",
  "just spam",
  {
    "id": 1234,
  },
  "color: gray",
  "+0ms",
  "color: rgba(128, 128, 128, 0.6); font-style: italic",
  "ns-1:ns-2",
]
`;

exports[`Console backend > avoids changing error messages 1`] = `
[
  "%s %o %c%s %c%s",
  "some error message",
  {
    "id": 1234,
  },
  "color: gray",
  "+0ms",
  "color: rgba(128, 128, 128, 0.6); font-style: italic",
  "ns-1:ns-2",
]
`;

exports[`Console backend > avoids changing info messages 1`] = `
[
  "%s %o %c%s %c%s",
  "a little info",
  {
    "id": 1234,
  },
  "color: gray",
  "+0ms",
  "color: rgba(128, 128, 128, 0.6); font-style: italic",
  "ns-1:ns-2",
]
`;

exports[`Console backend > avoids changing warn messages 1`] = `
[
  "%s %o %c%s %c%s",
  "a warning",
  {
    "id": 1234,
  },
  "color: gray",
  "+0ms",
  "color: rgba(128, 128, 128, 0.6); font-style: italic",
  "ns-1:ns-2",
]
`;
